--- a/sass/scss/partials/components/_header.scss
+++ b/sass/scss/partials/components/_header.scss
@@ -28,10 +28,16 @@
         width: 100%;
         padding: 1rem;
         .logo{
-            img{
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
+            .logo-button{
+                &:hover{
+                    opacity: 0.8;
+                    transition: opacity .5s;
+                }
+                .logo-img{
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                }
             }
         }
         .open-menu{
