--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -3,36 +3,21 @@
   padding: 0;
 }
 
-.header-wrapper {
-  width: 100%;
-  height: 750px;
-  background-image: url("../../assest/images/modelos-ropa4.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  overflow-x: hidden;
-}
-.header-wrapper .intro {
-  position: relative;
-  top: 200px;
-}
-.header-wrapper .intro .text {
-  text-align: center;
-}
-.header-wrapper .fixed {
+.fixed {
   position: fixed;
   z-index: 1;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 640px) {
-  .header-wrapper .fixed #nav-header-link {
+  .fixed #nav-header-link {
     color: white;
   }
 }
-.header-wrapper .fixed .carrito {
+.fixed .carrito {
   color: black;
 }
-.header-wrapper .menu {
+
+header .menu, header .other-menu {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -40,20 +25,20 @@
   width: 100%;
   padding: 1rem;
 }
-.header-wrapper .menu .logo .logo-button:hover {
+header .menu .logo .logo-button:hover, header .other-menu .logo .logo-button:hover {
   opacity: 0.8;
   transition: opacity 0.5s;
 }
-.header-wrapper .menu .logo .logo-button .logo-img {
+header .menu .logo .logo-button .logo-img, header .other-menu .logo .logo-button .logo-img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
 }
-.header-wrapper .menu .open-menu {
+header .menu .open-menu, header .other-menu .open-menu {
   display: none;
 }
 @media screen and (max-width: 640px) {
-  .header-wrapper .menu .open-menu {
+  header .menu .open-menu, header .other-menu .open-menu {
     display: block;
     border: 0;
     background-color: transparent;
@@ -61,12 +46,12 @@
     font-size: 1.25em;
   }
 }
-.header-wrapper .menu .nav-bar .visible {
+header .menu .nav-bar .visible, header .other-menu .nav-bar .visible {
   opacity: 1;
   visibility: visible;
 }
 @media screen and (max-width: 640px) {
-  .header-wrapper .menu .nav-bar {
+  header .menu .nav-bar, header .other-menu .nav-bar {
     visibility: hidden;
     position: fixed;
     height: 100%;
@@ -83,11 +68,11 @@
     flex-direction: column;
   }
 }
-.header-wrapper .menu .nav-bar .close-menu {
+header .menu .nav-bar .close-menu, header .other-menu .nav-bar .close-menu {
   display: none;
 }
 @media screen and (max-width: 640px) {
-  .header-wrapper .menu .nav-bar .close-menu {
+  header .menu .nav-bar .close-menu, header .other-menu .nav-bar .close-menu {
     display: block;
     border: 0;
     background-color: transparent;
@@ -95,7 +80,7 @@
     font-size: 1.25em;
   }
 }
-.header-wrapper .menu .nav-bar .option-menu {
+header .menu .nav-bar .option-menu, header .other-menu .nav-bar .option-menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,7 +88,7 @@
   gap: 1rem;
 }
 @media screen and (max-width: 640px) {
-  .header-wrapper .menu .nav-bar .option-menu {
+  header .menu .nav-bar .option-menu, header .other-menu .nav-bar .option-menu {
     display: flex;
     justify-content: center;
     align-items: end;
@@ -111,18 +96,18 @@
     color: white;
   }
 }
-.header-wrapper .menu .nav-bar .option-menu .option {
+header .menu .nav-bar .option-menu .option, header .other-menu .nav-bar .option-menu .option {
   text-align: center;
   list-style: none;
 }
-.header-wrapper .menu .nav-bar .option-menu .option a {
+header .menu .nav-bar .option-menu .option a, header .other-menu .nav-bar .option-menu .option a {
   text-decoration: none;
   color: rgb(255, 255, 255);
 }
-.header-wrapper .menu .nav-bar .option-menu .option a:hover {
+header .menu .nav-bar .option-menu .option a:hover, header .other-menu .nav-bar .option-menu .option a:hover {
   text-decoration: underline;
 }
-.header-wrapper .menu .nav-tools .tools-list {
+header .menu .nav-tools .tools-list, header .other-menu .nav-tools .tools-list {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -131,22 +116,42 @@
   padding-left: 0;
   gap: 1rem;
 }
-.header-wrapper .menu .nav-tools .tools-list .carrito .boton-carrito {
+header .menu .nav-tools .tools-list .carrito .boton-carrito, header .other-menu .nav-tools .tools-list .carrito .boton-carrito {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   color: white;
 }
-.header-wrapper .menu .nav-tools .tools-list .boton-dark-mode .dark-mode-logo {
+header .menu .nav-tools .tools-list .boton-dark-mode .dark-mode-logo, header .other-menu .nav-tools .tools-list .boton-dark-mode .dark-mode-logo {
   background: none;
   border-style: none;
   color: white;
 }
 @media screen and (max-width: 900px) {
-  .header-wrapper .menu .nav-tools .tools-list .boton-dark-mode {
+  header .menu .nav-tools .tools-list .boton-dark-mode, header .other-menu .nav-tools .tools-list .boton-dark-mode {
     display: none;
   }
+}
+header .other-menu {
+  background-color: black;
+}
+
+.header-wrapper {
+  width: 100%;
+  height: 750px;
+  background-image: url("../../assest/images/modelos-ropa4.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  overflow-x: hidden;
+}
+.header-wrapper .intro {
+  position: relative;
+  top: 200px;
+}
+.header-wrapper .intro .text {
+  text-align: center;
 }
 
 .links, .links .options {
@@ -168,6 +173,64 @@
 }
 .links .options .social-media-logo a {
   color: white;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+.card-container .card {
+  border-style: none;
+  margin-right: 1rem;
+}
+@media screen and (max-width: 640px) {
+  .card-container .card {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+.card-container .card:hover {
+  transform: scale(1.2, 1.2);
+  transition: 0.5s;
+}
+.card-container .card:hover .info-producto .link-producto {
+  visibility: visible;
+}
+.card-container .card .card-img img {
+  height: 280px;
+  width: 100%;
+}
+.card-container .card .info-producto {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+}
+.card-container .card .info-producto .precio-producto p {
+  margin-bottom: 0;
+}
+.card-container .card .info-producto .link-producto {
+  visibility: hidden;
+  width: 100%;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 900px) {
+  .card-container .card .info-producto .link-producto {
+    visibility: visible;
+  }
+}
+.card-container .card .info-producto .link-producto a {
+  text-decoration: none;
+  color: black;
+}
+.card-container .card .info-producto .link-producto a:hover {
+  color: rgb(234, 11, 11);
 }
 
 .section-info {
@@ -215,63 +278,6 @@ main .dark-mode .card-container .card .info-producto .link-producto a {
 }
 main .dark-mode .card-container .card .info-producto .link-producto a:hover {
   color: chartreuse;
-}
-main .card-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 80%;
-  margin: 0 auto;
-}
-main .card-container .card {
-  border-style: none;
-  margin-right: 1rem;
-}
-@media screen and (max-width: 640px) {
-  main .card-container .card {
-    width: 80%;
-    margin: 0 auto;
-  }
-}
-main .card-container .card:hover {
-  transform: scale(1.2, 1.2);
-  transition: 0.5s;
-}
-main .card-container .card:hover .info-producto .link-producto {
-  visibility: visible;
-}
-main .card-container .card .card-img img {
-  height: 280px;
-  width: 100%;
-}
-main .card-container .card .info-producto {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-}
-main .card-container .card .info-producto .precio-producto p {
-  margin-bottom: 0;
-}
-main .card-container .card .info-producto .link-producto {
-  visibility: hidden;
-  width: 100%;
-  margin-bottom: 20px;
-}
-@media screen and (max-width: 900px) {
-  main .card-container .card .info-producto .link-producto {
-    visibility: visible;
-  }
-}
-main .card-container .card .info-producto .link-producto a {
-  text-decoration: none;
-  color: black;
-}
-main .card-container .card .info-producto .link-producto a:hover {
-  color: rgb(234, 11, 11);
 }
 main .cat-container {
   height: 700px;
@@ -377,6 +383,36 @@ main .cat-container .info-extra {
   main .cat-container .info-extra {
     display: none;
   }
+}
+
+.product-wrapper {
+  height: 1500px;
+  width: 100%;
+  display: grid;
+  grid-template-areas: "img img info" "img img info" "other other other";
+  place-content: center;
+}
+@media screen and (max-width: 900px) {
+  .product-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+.product-wrapper .product-img {
+  grid-area: img;
+}
+.product-wrapper .product-info {
+  grid-area: info;
+  width: 70%;
+}
+.product-wrapper .other-products {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  grid-area: other;
 }
 
 /*# sourceMappingURL=styles.css.map */
