--- a/sass/scss/partials/components/_header.scss
+++ b/sass/scss/partials/components/_header.scss
@@ -1,28 +1,4 @@
-.header-wrapper{
-    width: 100%;
-    height: 750px;
-    @include background-img(url('../../assest/images/modelos-ropa4.jpg'), no-repeat, cover, center center);
-    overflow-x: hidden;
-    .intro{
-        position: relative;
-        top: 200px;
-        .text{
-            text-align: center;
-        }
-    }
-    .fixed{
-        position: fixed;
-        z-index: 1;
-        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-        #nav-header-link{
-            @include mobile(){
-                color: white;
-            }
-        }
-        .carrito{
-            color: black
-        }
-    }
+header{
     .menu{
         @include flex(row, space-around, center);
         width: 100%;
@@ -124,5 +100,9 @@
             }
         }
         
+    }
+    .other-menu{
+        @extend .menu;
+        background-color: black;
     }
 }
