agrego estilos para vista mobile del card container usado en index y en los archivos de products; le doy estilos a vista desktop, tablet y mobile a los products

--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -184,14 +184,26 @@ header .other-menu {
   width: 80%;
   margin: 0 auto;
 }
+@media screen and (max-width: 640px) {
+  .card-container {
+    flex-wrap: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
 .card-container .card {
   border-style: none;
   margin-right: 1rem;
 }
 @media screen and (max-width: 640px) {
   .card-container .card {
-    width: 80%;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
 .card-container .card:hover {
@@ -204,6 +216,12 @@ header .other-menu {
 .card-container .card .card-img img {
   height: 280px;
   width: 100%;
+}
+@media screen and (max-width: 640px) {
+  .card-container .card .card-img img {
+    height: 240px;
+    width: 100%;
+  }
 }
 .card-container .card .info-producto {
   width: 100%;
@@ -262,6 +280,9 @@ main .dark-mode {
   background-color: #1c1c1c;
 }
 main .dark-mode p {
+  color: white;
+}
+main .dark-mode h1 {
   color: white;
 }
 main .dark-mode h3 {
@@ -386,7 +407,7 @@ main .cat-container .info-extra {
 }
 
 .product-wrapper {
-  height: 1500px;
+  height: 100%;
   width: 100%;
   display: grid;
   grid-template-areas: "img img info" "img img info" "other other other";
@@ -398,21 +419,89 @@ main .cat-container .info-extra {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100%;
   }
 }
 .product-wrapper .product-img {
   grid-area: img;
 }
+.product-wrapper .product-img img {
+  height: 600px;
+  width: 500px;
+  position: relative;
+  left: 80px;
+  top: 100px;
+}
+@media screen and (max-width: 900px) {
+  .product-wrapper .product-img img {
+    position: static;
+    height: 400px;
+    width: 300px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .product-wrapper .product-img img {
+    height: 300px;
+    width: 250px;
+  }
+}
 .product-wrapper .product-info {
   grid-area: info;
-  width: 70%;
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-direction: column;
+}
+@media screen and (max-width: 900px) {
+  .product-wrapper .product-info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+    flex-direction: column;
+  }
+}
+.product-wrapper .product-info .info {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-direction: column;
+}
+@media screen and (max-width: 900px) {
+  .product-wrapper .product-info .info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+    flex-direction: column;
+  }
+}
+.product-wrapper .product-info .add-to-cart {
+  padding-top: 1rem;
+  height: 150px;
+  gap: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: start;
+  flex-direction: column;
+}
+@media screen and (max-width: 640px) {
+  .product-wrapper .product-info .add-to-cart button {
+    font-size: 1em;
+  }
 }
 .product-wrapper .other-products {
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   flex-direction: column;
+  padding-top: 6rem;
   grid-area: other;
+}
+@media screen and (max-width: 900px) {
+  .product-wrapper .other-products {
+    padding-top: 3rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
