--- a/sass/scss/partials/components/_product.scss
+++ b/sass/scss/partials/components/_product.scss
@@ -1,5 +1,5 @@
 .product-wrapper{
-    height: 1500px;
+    height: 100%;
     width: 100%;
     display: grid;
     grid-template-areas: 
@@ -9,16 +9,56 @@
     place-content: center;
     @include tablet(){
         @include flex(column, center, center);
+        height: 100%;
     }
     .product-img{
         grid-area: img;
+        img{
+            @include img-size-card(600px, 500px);
+            position: relative;
+            left: 80px;
+            top: 100px;
+            @include tablet(){
+                position: static;
+                @include img-size-card(400px, 300px);
+            }
+            @include mobile(){
+                @include img-size-card(300px, 250px);
+            }
+        }
     }
     .product-info{
         grid-area: info;
-        width: 70%;
+        width: 50%;
+        margin: 0 auto;
+        @include flex(column, center,end);
+        @include tablet(){
+            @include flex(column, flex-start,start);
+        }
+        .info{
+            @include flex(column, center,end);
+            @include tablet(){
+                @include flex(column, flex-start,start);
+            }
+        }
+        .add-to-cart{
+            padding-top: 1rem;
+            height: 150px;
+            gap: 1rem;
+            @include flex(column, flex-end, start);
+            button{
+                @include mobile(){
+                    font-size: 1em;
+                }
+            }
+        }
     }
     .other-products{
-        @include flex(column, center, start);
+        @include flex(column, center, center);
+        padding-top: 6rem;
         grid-area: other;
+        @include tablet(){
+            padding-top: 3rem;
+        }
     }
 }
