--- a/sass/scss/partials/components/_card-container.scss
+++ b/sass/scss/partials/components/_card-container.scss
@@ -3,13 +3,17 @@
     flex-wrap: wrap;
     width: 80%;
     margin: 0 auto;
+    @include mobile(){
+        flex-wrap: nowrap;
+        @include flex(column, center, center);
+    }
     .card{
         border-style: none;
         margin-right: 1rem;
-        
         @include mobile(){
-            width: 80%;
+            // width: 80%;
             margin: 0 auto;
+            @include flex(column, center, center);
         }
         &:hover{
             transform: scale(1.20,1.20);
@@ -23,6 +27,9 @@
         .card-img{
             img{
                 @include img-size-card(280px, 100%);
+                @include mobile(){
+                    @include img-size-card(240px, 100%);
+                }
             }
         }
         .info-producto{
