--- a/sass/scss/partials/components/_index.scss
+++ b/sass/scss/partials/components/_index.scss
@@ -4,6 +4,9 @@ main{
         p{
             color: white;
         }
+        h1{
+            color: white;
+        }
         h3{
             color: white;
         }
